# USG

./: CMakeLists.txt  Log.txt  Test.TGA
res/json/: Ship.json  test.json
res/models/: AnimTest.dae  AnimTest1.dae
res/models/TestChar/: TestChar.dae
res/shaders/: Deferred.fs  Deferred.vs  Deferred_Light_Directional.fs  Deferred_Light_Directional_Shadow.fs  Deferred_Light_Point.fs  Deferred_Light_Spot.fs  Deferred_Light_Spot_Shadow.fs  Lighting.ls  ScreenTexture.fs  Shadow.fs  Shadow.vs  Skybox.fs  Textured - Copy.fs  Textured.fs  Textured.shader  Textured.vs  TexturedAnimated.vs  TexturedLighting.fs  Textured_Glow.fs  Textured_Instanced.fs  Textured_Instanced.vs  Textured_Lighting.fs  Textured_Shadow.fs  Textured_Shadow.vs
src/Client/: Client.cpp  Client.hpp  ClientMain.cpp  NetworkTest.hpp  PlayerController.cpp  PlayerController.hpp  RenderingSystem.hpp  SDL2_Include.hpp
src/Client/Component/: ComponentCamera.hpp  ComponentModel.hpp  DebugCamera.cpp  DebugCamera.hpp  DebugCameraComponent.cpp  DebugCameraComponent.hpp  LightComponent.cpp  LightComponent.hpp  PlayerShipController.cpp  PlayerShipController.hpp
src/Client/Entity/: EntityPlayerClient.cpp  EntityPlayerClient.hpp  PlayerController.cpp  PlayerController.hpp  PlayerControllerInterface.hpp  PlayerInterface.cpp  PlayerInterface.hpp
src/Client/GameState/: GameState.hpp  GameState_Editor.cpp  GameState_Editor.hpp  GameState_MainMenu.cpp  GameState_Multiplayer.cpp  GameState_Singleplayer.cpp  GameState_Singleplayer.hpp
src/Client/Input/: ButtonAxis.cpp  ButtonAxis.hpp  GamepadAxis.cpp  GamepadAxis.hpp  InputDevice.hpp  InputManager.cpp  InputManager.hpp  JoystickAxis.cpp  JoystickAxis.hpp  JoystickButton.hpp  JoystickDevice.cpp  JoystickDevice.hpp  KeyboardButton.cpp  KeyboardButton.hpp  KeyboardMouseDevice.cpp  KeyboardMouseDevice.hpp  MouseAxis.cpp  MouseAxis.hpp
src/Client/Networking/: ClientNetworkManager.cpp  ClientNetworkManager.hpp
src/Client/Rendering/: Camera.cpp  Camera.hpp  FBO.hpp  G_Buffer.cpp  G_Buffer.hpp  LightManager.cpp  LightManager.hpp  LightShaderUtil.hpp  Lights.cpp  Lights.hpp  Model.cpp  Model.hpp  OpenGL_Include.hpp  RenderController.hpp  RenderingEngine.cpp  RenderingEngine.hpp  RenderingManager.cpp  RenderingManager.hpp  RenderingSystem.cpp  RenderingSystem.hpp  ShaderProgram.cpp  ShaderProgram.hpp  ShadowMap.cpp  ShadowMap.hpp  Skybox.cpp  Skybox.hpp  Window.cpp  Window.hpp
src/Client/Resource/: AnimatedMesh.cpp  AnimatedMesh.hpp  MeshPool.cpp  MeshPool.hpp  ShaderPool.cpp  ShaderPool.hpp  Skeleton.cpp  Skeleton.hpp  TexturePool.cpp  TexturePool.hpp  TexturedMesh.cpp  TexturedMesh.hpp  TexturedMeshInstanced.cpp  TexturedMeshInstanced.hpp
src/Client/Ship/: ShipTemplate.cpp  ShipTemplate.hpp
src/Common/: Component.hpp  EntityDestroyer.cpp  EntityDestroyer.hpp  EntityX_Include.hpp  GLM_Include.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  NodeSystem.cpp  ProjectileSystem.cpp  ProjectileSystem.hpp  Rotation.hpp  TimeToLiveSystem.hpp  Transform.cpp  Transform.hpp  Transforms.hpp  Types.hpp  World.hpp  WorldSystem.cpp  WorldSystem.hpp
src/Common/AI/: PidController.cpp  PidController.hpp  QuaternionPidController.cpp  QuaternionPidController.hpp  VectorPidController.cpp  VectorPidController.hpp
src/Common/Component/: CharacterController.cpp  CharacterController.hpp  Component.cpp  Component.hpp  ComponentEntity.hpp  ComponentMass.cpp  ComponentMass.hpp  ComponentModel.cpp  ComponentModel.hpp  ComponentNode.hpp  ComponentShipFlight.cpp  ComponentShipFlight.hpp  EntityHealth.cpp  EntityHealth.hpp  FlightController.hpp  Mass.hpp  Model.cpp  Model.hpp  Projectile.cpp  Projectile.hpp  ProjectileLauncher.cpp  ProjectileLauncher.hpp  ProjectileSystem.cpp  Seat.hpp  SeatInteract.cpp  SeatInteract.hpp  ShipController.cpp  ShipController.hpp  TimeToLive.hpp  Transform.hpp  VehicleController.cpp  VehicleController.hpp
src/Common/Entity/: Component.hpp  ComponentCollisionShape.cpp  ComponentCollisionShape.hpp  ComponentLight.cpp  ComponentLight.hpp  ComponentModel.cpp  ComponentModel.hpp  ComponentRotate.hpp  Entity.cpp  Entity.hpp  EntityCharacter.cpp  EntityCharacter.hpp  EntityConstructor.cpp  EntityConstructor.hpp  EntityGridSystem.cpp  EntityGridSystem.hpp  EntityManager.cpp  EntityManager.hpp  EntityNode.cpp  EntityNode.hpp  EntityTempShip.cpp  EntityTempShip.hpp  EntityTempShipInside.cpp  EntityTempShipInside.hpp  I_Node.hpp  Node.cpp  Node.hpp  NodeEntity.cpp  NodeEntity.hpp
src/Common/Job/: JobManager.cpp  JobManager.hpp
src/Common/Logger/: Logger.cpp  Logger.hpp
src/Common/Networking/: Packet.cpp  Packet.hpp
src/Common/Physics/: Bullet_Include.cpp  Bullet_Include.hpp  CollisionShape.cpp  CollisionShape.hpp  MuiltiCollisionShape.hpp  MuiltiRigidBody.cpp  MuiltiRigidBody.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp  ReactPhysics3D_Include.hpp  RigidBody.cpp  RigidBody.hpp  SingleRigidBody.cpp  SingleRigidBody.hpp  Single_RigidBody.cpp  Single_RigidBody.hpp
src/Common/Physics2/: ReactPhysics3D_Include.hpp  RigidBody.hpp
src/Server/: Server.cpp  Server.hpp  ServerMain.cpp
(+38 files in other folders)
